--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^29.5.0",
     "path": "^0.12.7",
     "sequelize": "^6.21.4",
-    "sqlite3": "^5.0.11"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
